# espidf-gemini-rest-api

./: .gitignore  README.md  gemini-rest-api.c  spiffs.c
examples/prompting-wt-files/: CMakeLists.txt  README.md
examples/prompting-wt-files/main/: CMakeLists.txt  main.c
examples/simple-chat-client/: CMakeLists.txt  README.md
examples/simple-chat-client/main/: main.c
fsimage/: prompt.txt
gemini-rest-api/: CMakeLists.txt  Kconfig.projbuild  LICENSE  README.md  gemini-rest-api.c  spiffs.c
gemini-rest-api/fsimage/: breaking-gods.txt
gemini-rest-api/include/: gemini-rest-api.h
include/: gemini-rest-api.h  spiffs.h
